--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
+
+* {
+	font-family: "Poppins", sans-serif;
+}
+
 .input-box:last-child {
 	@apply border-t border-gray-600;
 }
